2001-09-03  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm: Load specialized modules on demand only.

2001-09-03  Max Horn  <max@quendi.de>

	* Bootstrap.pm: Fixed bootstrap by forcing the package descriptions
	to be read in.

2001-08-31  Christoph Pfisterer  <cp@chrisp.de>

	* NetAccess.pm (fetch_url): Let curl follow redirects.

2001-08-29  Christoph Pfisterer  <cp@chrisp.de>

	* NetAccess.pm (fetch_url): Support curl as well as wget.

	* Configure.pm (configure): Passive FTP is now the default.

	* PkgVersion.pm (phase_install): Added DocFiles field to ease
	installation of README files.

2001-08-28  Max Horn  <max@quendi.de>

	* Validation.pm: made sure that validate also works when the
	specified filename contains a path; upped limit for Description
	field to 45 chars, seems to be sufficient for "fink list"

2001-08-26  Max Horn  <max@quendi.de>

	* Validation.pm: New Module. Contains the code for validation of
	both .info and .deb files.
	* Engine.pm: moved validation code to new module.

2001-08-26  Max Horn  <max@quendi.de>

	* Engine.pm: added new command "validate" (alias "check") which
	validates a given package .info file or .deb file. Not finished.

2001-08-24  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (get_description): Added the Maintainer field to
	'fink describe' output.

	* Bootstrap.pm (bootstrap): Added code to install some
	non-essential, but important packages at bootstrap time. Currently
	installs apt.

2001-08-22  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_patch): Added support for
	UpdatePoMakefile. When set, copy the updated Makefile.in.in to the
	po subdirectory of the source tree.

2001-08-14  Christoph Pfisterer  <cp@chrisp.de>

	* SelfUpdate.pm: New module. Contains code to let Fink update
	itself from the Internet.
	* Engine.pm: Added self-update commands to the command list.
	* NetAccess.pm: New module. Encapsulates downloading files from
	the Internet (currently done via wget).